server/zanata-war/src/main/webapp/resources/assets/css/style.css
/* ... */
.new-zanata .list--slat-horizontal > li.list__right {
  padding: 0;
  border-left: none;
}
@media (min-width: 46.25em) {
  .new-zanata .list--slat-horizontal > li.list__right {
    float: right;
  }
}

/*

#### List Block Links

```
<ul class="list--block-links">
  <li><a href="#">Link</a></li>
  <li><a href="#">Link</a></li>
  <li><a href="#">Link</a></li>
  <li><a href="#">Link</a></li>
</ul>
```

*/
.new-zanata .list--block-links > li {
  padding: 0;
}
.new-zanata .list--block-links > li > a {
  display: block;
  padding: 0.75em;
}
.new-zanata .list--block-links > li > a:hover {
  background-color: #fff;
}
.new-zanata .txt--invert.list--block-links li > a:hover {
  background-color: #393f46 !important;
}
.new-zanata .txt--invert.list--block-links li > a:active {
  background-color: #2d3338 !important;
}

/*

#### List Panel

```example
<ul class="list--panel">
  <li>List Item</li>
  <li>List Item</li>
  <li>List Item</li>
  <li>List Item</li>
</ul>
```
*/
.new-zanata .list--panel > li, .new-zanata .list--stats > li {
  border-bottom: 1px solid rgba(32, 113, 138, 0.15);
  position: relative;
}
.new-zanata .list--panel > li.is-active, .new-zanata .list--stats > li.is-active {
  background-color: #fff;
}
.new-zanata .list--panel > li.is-active > a, .new-zanata .list--stats > li.is-active > a {
  color: #20718A;
}
.new-zanata .list--panel .list__item, .new-zanata .list--stats .list__item,
.new-zanata .list--panel .list__item__content,
.new-zanata .list--stats .list__item__content {
  display: table;
  table-layout: fixed;
  padding: 0.375em 0.75em;
}
.new-zanata .list--panel .list__item__info, .new-zanata .list--stats .list__item__info {
  display: table-cell;
  width: 100%;
  vertical-align: middle;
  line-height: 1em;
}
.new-zanata .list--panel .list__item--actionable, .new-zanata .list--stats .list__item--actionable {
  position: relative;
}
.new-zanata .list--panel .list__item--actionable .list__item__content, .new-zanata .list--stats .list__item--actionable .list__item__content {
  padding-left: 2.0625em;
}
.new-zanata .list--panel .list__item__action, .new-zanata .list--stats .list__item__action {
  position: absolute;
  left: 0.3em;
  top: 50%;
  margin-top: -1em;
  width: 0.75em;
}
.new-zanata .list--panel .list__item__actions, .new-zanata .list--stats .list__item__actions {
  margin-left: 0.75em;
  text-align: right;
  vertical-align: middle;
  white-space: nowrap;
}
.new-zanata .list--panel .list__item__list, .new-zanata .list--stats .list__item__list {
  display: inline-block;
  line-height: .75em;
}
.new-zanata .list--panel .list__item__list > li, .new-zanata .list--stats .list__item__list > li {
  margin-right: 0.1875em;
  line-height: 1em;
}
.new-zanata .list--panel .list__item__list > li:last-child, .new-zanata .list--stats .list__item__list > li:last-child {
  margin-right: 0;
}
.new-zanata .list--panel .list__item__meta, .new-zanata .list--stats .list__item__meta {
  font-size: 0.875em;
  display: block;
  margin: 0 0 0.42857em;
  color: #90b8c5;
  font-weight: 400;
  line-height: 1em;
  word-break: break-all;
  word-break: break-word;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

/*

#### List Stats

```example
<ul class="list--stats">
  <li class="progress-bar__expander panels__panel__item is-active">
    <a href="#">
      <div class="list__item">
        <div class="list__item__info">
          <span class="list__title">Russian</span>
        </div>
        <div class="list__item__stats">
          <span class="stats--small txt--state-neutral">
            <span class="stats__figure">0%</span>
            <span class="stats__unit">translated</span>
          </span>
        </div>
      </div>
      <div class="progress-bar">
        <span class="progress-bar__item"></span>
      </div>
    </a>
  </li>
  <li class="progress-bar__expander bg--highest--hover">
    <a href="#">
      <div class="list__item">
        <div class="list__item__info">
          <span class="list__title">Japanese</span>
        </div>
        <div class="list__item__stats">
          <span class="stats--small txt--state-neutral">
            <span class="stats__figure">0%</span>
            <span class="stats__unit">translated</span>
          </span>
        </div>
      </div>
      <div class="progress-bar">
        <span class="progress-bar__item"></span>
      </div>
    </a>
  </li>
</ul>
```

*/
.new-zanata .list--stats > li {
  padding-bottom: 0.375em;
}
.new-zanata .list--stats > li:first-child {
  margin-top: 0;
}
.new-zanata .list--stats > li.is-active {
  background-color: #20718A;
}
.new-zanata .list--stats > li.is-active > a,
.new-zanata .list--stats > li.is-active .dropdown__toggle,
.new-zanata .list--stats > li.is-active .list__title,
.new-zanata .list--stats > li.is-active .list__item__stats,
.new-zanata .list--stats > li.is-active .list__item__stats span {
  color: #fff;
}
.new-zanata .list--stats > li.is-active .list__item__meta {
  color: #e6e6e6;
}
.new-zanata .list--stats .list__item,
.new-zanata .list--stats .list__item__content {
  padding: 0.75em 0.75em 0.375em;
  min-height: 3em;
}
.new-zanata .list--stats .list__item__stats {
  margin-left: 0.75em;
  text-align: right;
  color: #20718A;
  vertical-align: middle;
}
.new-zanata .list--stats .list__title {
  line-height: 1em;
}
.new-zanata .list--stats .list__item__meta {
  margin: 0.34286em 0 0;
}
/* ... */

